--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -476,6 +476,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .block-content {
   font-family: be-semi-bold;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.block-content > ul {
+  list-style-position: inside;
+  list-style-type: disc;
+}
+
+.block-content > ul > br {
+    display: none;
 }
 
 .debug-screens::before {
@@ -552,6 +563,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.left-aboutoffleft {
+  left: -8.5rem;
+}
+
+.top-\[23rem\] {
+  top: 23rem;
+}
+
+.left-\[13\.5rem\] {
+  left: 13.5rem;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
@@ -588,10 +615,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 450px;
 }
 
-.h-partners {
-  height: 302px;
-}
-
 .h-footer {
   height: 325px;
 }
@@ -616,8 +639,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
 .translate-y-\[-3\.3rem\] {
   --tw-translate-y: -3.3rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-45 {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-45 {
+  --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -639,6 +684,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -692,11 +741,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-dark-lime {
   --tw-bg-opacity: 1;
   background-color: rgb(15 186 169 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-lime {
@@ -763,6 +807,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-\[2\.5rem\] {
   padding-top: 2.5rem;
+}
+
+.pt-48 {
+  padding-top: 12rem;
 }
 
 .pl-48 {
