--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -489,6 +489,25 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: none;
 }
 
+.nav-menu {
+    z-index: 99;
+    position: absolute;
+    top: 103px;
+    right: 0;
+    height: 48rem;
+    width: 48rem;
+
+    overflow: hidden;
+    transition: 2s;
+    opacity: 0;
+}
+
+.open {
+    opacity: 1;
+    /*right: -11rem;*/
+
+}
+
 .debug-screens::before {
   position: fixed;
   z-index: 2147483647;
@@ -587,8 +606,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 50%;
 }
 
+.top-\[6\.5rem\] {
+  top: 6.5rem;
+}
+
+.right-1\/2 {
+  right: 50%;
+}
+
+.right-1\/3 {
+  right: 33.333333%;
+}
+
 .z-10 {
   z-index: 10;
+}
+
+.z-100 {
+  z-index: 100;
 }
 
 .col-span-2 {
@@ -649,6 +684,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .translate-y-\[-3\.3rem\] {
@@ -722,6 +761,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-full {
@@ -871,6 +920,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
 .leading-normal {
   line-height: 1.5;
 }
@@ -890,6 +948,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .text-lime {
+  --tw-text-opacity: 1;
+  color: rgb(3 252 150 / var(--tw-text-opacity));
+}
+
+.hover\:text-lime:hover {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
 }
