Nav Bar 90 percent

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -60,17 +60,19 @@
     z-index: 99;
     position: absolute;
     top: 103px;
-    right: 0;
+    right: -50%;
     height: 48rem;
     width: 48rem;
-
     overflow: hidden;
     transition: 2s;
     opacity: 0;
 }
 
+
+
 .open {
     opacity: 1;
-    /*right: -11rem;*/
+    right: 0;
 
 }
+
