--- a/resources/views/layouts/hero/_hero.antlers.html
+++ b/resources/views/layouts/hero/_hero.antlers.html
@@ -2,6 +2,7 @@
     {{ hero_data.0 }}
 
     <img class="absolute w-full h-full object-cover object-center" src="{{hero_image}}" alt="">
+    <div class="absolute w-full h-full bg-black bg-opacity-20" alt=""></div>
     <div class="absolute top-1/2 pl-48 flex flex-col justify-center text-white ">
         <div class="z-10 text-5xl leading-tight">{{hero_title}}</div>
         <div class="z-10 text-xl pt-3">{{hero_content}}</div>
