--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -493,10 +493,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     z-index: 99;
     position: absolute;
     top: 103px;
-    right: 0;
+    right: -50%;
     height: 48rem;
     width: 48rem;
-
     overflow: hidden;
     transition: 2s;
     opacity: 0;
@@ -504,7 +503,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .open {
     opacity: 1;
-    /*right: -11rem;*/
+    right: 0;
 
 }
 
@@ -606,14 +605,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 50%;
 }
 
-.top-\[6\.5rem\] {
-  top: 6.5rem;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
 .right-1\/3 {
   right: 33.333333%;
 }
@@ -640,6 +631,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid {
   display: grid;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-panel {
@@ -670,6 +665,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .w-full {
   width: 100%;
 }
@@ -686,12 +685,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 300px;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .max-w-full {
   max-width: 100%;
 }
 
 .translate-y-\[-3\.3rem\] {
   --tw-translate-y: -3.3rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-3 {
+  --tw-translate-x: 0.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -707,6 +715,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-4 {
@@ -773,6 +785,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -800,6 +816,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-indigo-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-20 {
+  --tw-bg-opacity: 0.2;
 }
 
 .object-cover {
@@ -878,6 +903,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.75rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .align-middle {
   vertical-align: middle;
 }
@@ -950,6 +979,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lime {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.bg-blend-darken {
+  background-blend-mode: darken;
 }
 
 .hover\:text-lime:hover {
