--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -7,7 +7,7 @@
         <title>{{ title ?? site:name }}</title>
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
     </head>
-    <body class="bg-white leading-normal font-be-semi-bold w-full relative max-w-full
+    <body class="bg-white leading-normal font-be-semi-bold w-full relative max-w-full overflow-x-hidden
     @env(['local','staging'] )
 debug-screens
 @endenv">
