--- a/resources/views/layouts/navigation/_main_nav.antlers.html
+++ b/resources/views/layouts/navigation/_main_nav.antlers.html
@@ -4,17 +4,20 @@
 
 
     <div id="ham" class="z-100">
-        <svg xmlns="http://www.w3.org/2000/svg" width="39" height="33" viewBox="0 0 39 33">
+        <svg id="burger" class="" xmlns="http://www.w3.org/2000/svg" width="39" height="33" viewBox="0 0 39 33">
         <g id="Group_36" data-name="Group 36" transform="translate(-1831 -32)">
             <rect id="Rectangle_11" data-name="Rectangle 11" width="39" height="5" transform="translate(1831 32)" fill="#1f2128"/>
             <rect id="Rectangle_20" data-name="Rectangle 20" width="39" height="5" transform="translate(1831 46)" fill="#1f2128"/>
             <rect id="Rectangle_21" data-name="Rectangle 21" width="39" height="5" transform="translate(1831 60)" fill="#1f2128"/>
         </g>
     </svg>
+        <svg id="close" xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 hidden transform translate-x-3" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+        </svg>
         <div id="navmenu" class="nav-menu overflow-hidden"><img src="/assets/imgs/nav-menu.svg" alt="">
             <div class="absolute top-10 right-1/3 flex flex-col space-y-6">
                 {{ nav:main_nav }}
-                <a class="text-white text-lg uppercase hover:text-lime" href="{{ url }}">{{ title }}</a>
+                <a class="text-white text-lg uppercase hover:text-lime cursor-pointer" href="{{ url }}">{{ title }}</a>
                 {{ /nav:main_nav }}
             </div>
 
