--- a/resources/views/layouts/hero/_hero.antlers.html
+++ b/resources/views/layouts/hero/_hero.antlers.html
@@ -3,7 +3,7 @@
 
     <img class="absolute w-full h-full object-cover object-center" src="{{hero_image}}" alt="">
     <div class="absolute w-full h-full bg-black bg-opacity-20" alt=""></div>
-    <img class="absolute -bottom-[25rem] -right-[10.5rem]" src="/assets/imgs/hero_triangle.svg" alt="">
+    <img id="hero-tri" class="absolute -bottom-[50rem] -right-[10.5rem]" src="/assets/imgs/hero_triangle.svg" alt="">
 
     <div class="absolute top-1/2 pl-48 flex flex-col justify-center text-white ">
         <div class="z-10 text-5xl leading-tight">{{hero_title}}</div>
