--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -5,7 +5,7 @@
 {{ /if }}
 
 {{ if show_topleft }}
-<img id="hero-tri" class="absolute -top-10 left-[-7.5rem]" src="/assets/imgs/quarter-jagged.svg" alt="">
+<img id="hero-tri" class="absolute -top-[5.5rem] left-[-10.5rem]" src="/assets/imgs/quarter-jagged.svg" alt="">
 {{ /if }}
 
 <!-- Mission -->
