--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -534,7 +534,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 #hero-tri {
     -webkit-animation: herotrislide 2s 3s ease-in-out forwards;
             animation: herotrislide 2s 3s ease-in-out forwards;
-
+z-index: 101;
 }
 
 @-webkit-keyframes herotrislide {
@@ -602,6 +602,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 #bottomCornerImage {
     -webkit-animation: bottomCornerImage 2s 1s ease-in-out forwards;
             animation: bottomCornerImage 2s 1s ease-in-out forwards;
+    visibility: hidden;
 
 }
 
@@ -611,6 +612,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
     100% {
         top: 23rem;
+        visibility: visible;
     }
 }
 
@@ -620,6 +622,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
     100% {
         top: 23rem;
+        visibility: visible;
     }
 }
 
@@ -733,16 +736,104 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: -10.5rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .right-1\/3 {
   right: 33.333333%;
+}
+
+.-top-\[5\.5rem\] {
+  top: -5.5rem;
+}
+
+.left-\[-10\.5rem\] {
+  left: -10.5rem;
+}
+
+.top-\[80px\] {
+  top: 80px;
+}
+
+.left-\[-335px\] {
+  left: -335px;
+}
+
+.top-\[156px\] {
+  top: 156px;
+}
+
+.left-\[-247px\] {
+  left: -247px;
+}
+
+.left-\[-17rem\] {
+  left: -17rem;
+}
+
+.top-\[10rem\] {
+  top: 10rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.left-\[9\.5rem\] {
+  left: 9.5rem;
+}
+
+.left-\[5\.5rem\] {
+  left: 5.5rem;
+}
+
+.top-\[12rem\] {
+  top: 12rem;
+}
+
+.bottom-\[12rem\] {
+  bottom: 12rem;
+}
+
+.bottom-\[37rem\] {
+  bottom: 37rem;
+}
+
+.left-\[2\.5rem\] {
+  left: 2.5rem;
+}
+
+.bottom-\[32rem\] {
+  bottom: 32rem;
+}
+
+.left-\[11\.5rem\] {
+  left: 11.5rem;
+}
+
+.left-\[-15rem\] {
+  left: -15rem;
+}
+
+.bottom-\[-12rem\] {
+  bottom: -12rem;
 }
 
 .z-10 {
   z-index: 10;
 }
 
+.z-102 {
+  z-index: 102;
+}
+
 .z-100 {
   z-index: 100;
+}
+
+.z-\[103\] {
+  z-index: 103;
 }
 
 .col-span-2 {
@@ -751,6 +842,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -771,6 +870,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-\[450px\] {
   height: 450px;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .h-footer {
@@ -797,6 +900,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
+.h-\[33\%\] {
+  height: 33%;
+}
+
+.h-\[38\%\] {
+  height: 38%;
+}
+
 .w-full {
   width: 100%;
 }
@@ -815,6 +930,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-16 {
   width: 4rem;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
 }
 
 .max-w-full {
@@ -849,6 +968,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   cursor: pointer;
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -861,8 +986,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-start {
@@ -883,6 +1024,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -921,6 +1066,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-b-dark {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(31 33 40 / var(--tw-border-opacity));
+}
+
 .bg-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(31 33 40 / var(--tw-bg-opacity));
@@ -946,6 +1108,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
 }
@@ -966,6 +1142,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-24 {
   padding: 6rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .py-24 {
@@ -998,6 +1182,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 6rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-48 {
+  padding-top: 12rem;
+  padding-bottom: 12rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1024,6 +1223,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pt-56 {
+  padding-top: 14rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .align-middle {
@@ -1085,6 +1304,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25;
 }
 
+.leading-loose {
+  line-height: 2;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1098,6 +1325,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lime {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.opacity-75 {
+  opacity: 0.75;
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .hover\:text-lime:hover {
