--- a/resources/views/layouts/navigation/_main_nav.antlers.html
+++ b/resources/views/layouts/navigation/_main_nav.antlers.html
@@ -1,4 +1,4 @@
-<nav class="h-navbar flex justify-between items-center text-dark px-24 text-3xl relative z-100 bg-white">
+<nav class="h-navbar flex justify-between items-center text-dark px-24 text-3xl z-100 bg-white absolute top-0 left-0 w-full">
     <div class="flex items-center pl-24">confluence <span><img class="h-8 pl-3" src="/assets/logos/company_logo.svg" alt=""></span></div>
 
 
