--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -626,6 +626,23 @@ z-index: 101;
     }
 }
 
+.panel-size {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+@media (min-width: 768px) {
+
+  .panel-size {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+}
+
 .debug-screens::before {
   position: fixed;
   z-index: 2147483647;
@@ -688,12 +705,12 @@ z-index: 101;
   position: relative;
 }
 
-.-top-10 {
-  top: -2.5rem;
+.-top-\[5\.5rem\] {
+  top: -5.5rem;
 }
 
-.left-\[-7\.5rem\] {
-  left: -7.5rem;
+.left-\[-10\.5rem\] {
+  left: -10.5rem;
 }
 
 .top-0 {
@@ -702,6 +719,14 @@ z-index: 101;
 
 .right-0 {
   right: 0px;
+}
+
+.-top-10 {
+  top: -2.5rem;
+}
+
+.left-\[-7\.5rem\] {
+  left: -7.5rem;
 }
 
 .top-10 {
@@ -714,6 +739,22 @@ z-index: 101;
 
 .left-\[13\.5rem\] {
   left: 13.5rem;
+}
+
+.bottom-\[-12rem\] {
+  bottom: -12rem;
+}
+
+.left-\[11\.5rem\] {
+  left: 11.5rem;
+}
+
+.top-\[10rem\] {
+  top: 10rem;
+}
+
+.left-\[-15rem\] {
+  left: -15rem;
 }
 
 .top-1\/2 {
@@ -736,116 +777,37 @@ z-index: 101;
   right: -10.5rem;
 }
 
-.left-0 {
-  left: 0px;
+.top-1\/4 {
+  top: 25%;
 }
 
 .right-1\/3 {
   right: 33.333333%;
 }
 
-.-top-\[5\.5rem\] {
-  top: -5.5rem;
-}
-
-.left-\[-10\.5rem\] {
-  left: -10.5rem;
-}
-
-.top-\[80px\] {
-  top: 80px;
-}
-
-.left-\[-335px\] {
-  left: -335px;
-}
-
-.top-\[156px\] {
-  top: 156px;
-}
-
-.left-\[-247px\] {
-  left: -247px;
-}
-
-.left-\[-17rem\] {
-  left: -17rem;
-}
-
-.top-\[10rem\] {
-  top: 10rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-\[9\.5rem\] {
-  left: 9.5rem;
-}
-
-.left-\[5\.5rem\] {
-  left: 5.5rem;
-}
-
-.top-\[12rem\] {
-  top: 12rem;
-}
-
-.bottom-\[12rem\] {
-  bottom: 12rem;
-}
-
-.bottom-\[37rem\] {
-  bottom: 37rem;
-}
-
-.left-\[2\.5rem\] {
-  left: 2.5rem;
-}
-
-.bottom-\[32rem\] {
-  bottom: 32rem;
-}
-
-.left-\[11\.5rem\] {
-  left: 11.5rem;
-}
-
-.left-\[-15rem\] {
-  left: -15rem;
-}
-
-.bottom-\[-12rem\] {
-  bottom: -12rem;
-}
-
 .z-10 {
   z-index: 10;
-}
-
-.z-102 {
-  z-index: 102;
 }
 
 .z-100 {
   z-index: 100;
 }
 
-.z-\[103\] {
-  z-index: 103;
+.z-102 {
+  z-index: 102;
 }
 
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.mt-48 {
-  margin-top: 12rem;
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .inline {
@@ -864,12 +826,12 @@ z-index: 101;
   display: none;
 }
 
-.h-panel {
-  height: 400px;
-}
-
 .h-\[450px\] {
   height: 450px;
+}
+
+.h-panel {
+  height: 400px;
 }
 
 .h-screen {
@@ -882,6 +844,10 @@ z-index: 101;
 
 .h-hero {
   height: 977px;
+}
+
+.h-hero-height {
+  height: calc(100vh - 103px);
 }
 
 .h-full {
@@ -898,18 +864,6 @@ z-index: 101;
 
 .h-16 {
   height: 4rem;
-}
-
-.h-56 {
-  height: 14rem;
-}
-
-.h-\[33\%\] {
-  height: 33%;
-}
-
-.h-\[38\%\] {
-  height: 38%;
 }
 
 .w-full {
@@ -930,10 +884,6 @@ z-index: 101;
 
 .w-16 {
   width: 4rem;
-}
-
-.w-\[1000px\] {
-  width: 1000px;
 }
 
 .max-w-full {
@@ -968,12 +918,6 @@ z-index: 101;
   cursor: pointer;
 }
 
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -986,24 +930,16 @@ z-index: 101;
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.place-items-center {
-  place-items: center;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .items-start {
@@ -1024,10 +960,6 @@ z-index: 101;
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1052,6 +984,12 @@ z-index: 101;
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1103,11 +1041,6 @@ z-index: 101;
   background-color: rgb(3 252 150 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-green-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
@@ -1116,6 +1049,11 @@ z-index: 101;
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -1129,11 +1067,6 @@ z-index: 101;
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-center {
-  -o-object-position: center;
-     object-position: center;
 }
 
 .p-12 {
@@ -1167,16 +1100,6 @@ z-index: 101;
   padding-bottom: 3rem;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-24 {
   padding-left: 6rem;
   padding-right: 6rem;
@@ -1192,9 +1115,24 @@ z-index: 101;
   padding-bottom: 0.5rem;
 }
 
-.py-48 {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pb-4 {
@@ -1209,40 +1147,36 @@ z-index: 101;
   padding-top: 12rem;
 }
 
-.pl-48 {
-  padding-left: 12rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pl-24 {
-  padding-left: 6rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
 .pt-56 {
   padding-top: 14rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .align-middle {
@@ -1304,10 +1238,6 @@ z-index: 101;
   line-height: 1.25;
 }
 
-.leading-loose {
-  line-height: 2;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -1322,28 +1252,68 @@ z-index: 101;
   color: rgb(31 33 40 / var(--tw-text-opacity));
 }
 
-.text-lime {
-  --tw-text-opacity: 1;
-  color: rgb(3 252 150 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-lime {
+  --tw-text-opacity: 1;
+  color: rgb(3 252 150 / var(--tw-text-opacity));
 }
 
 .opacity-75 {
   opacity: 0.75;
 }
 
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .hover\:text-lime:hover {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+
+  .md\:top-1\/2 {
+    top: 50%;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:translate-y-\[-3\.3rem\] {
+    --tw-translate-y: -3.3rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .md\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .md\:pl-48 {
+    padding-left: 12rem;
+  }
+
+  .md\:pl-24 {
+    padding-left: 6rem;
+  }
 }
 
 @media (min-width: 1280px) {
