Home Small Display

--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -21,7 +21,7 @@
 <div class="bg-white text-dark panel-size flex flex-col space-y-4">
     <div class="block-heading">{{track_heading}}</div>
     <div class="pb-4">{{track_content | nl2br}}</div>
-    <div class="grid grid-cols-1 md:grid-cols-4 space-y-4 space-x-2 mx-auto">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 space-y-4 space-x-2 mx-auto">
         {{ stats }}
         {{ partial:layouts/fieldsets/tracking_stats }}
         {{ /stats }}
