--- a/resources/views/layouts/panels/partners.antlers.html
+++ b/resources/views/layouts/panels/partners.antlers.html
@@ -2,7 +2,7 @@
     {{ partners }}
     <div class="block-heading">{{partner_heading}}</div>
     <div class="pb-4">{{partner_subheading}}</div>
-    <div class="grid grid-cols-1 md:grid-cols-4 space-x-2 align-middle items-center transform md:translate-y-[-3.3rem]">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 space-x-2 align-middle items-center transform md:translate-y-[-3.3rem]">
         {{ companies }}
         <img class="" src="{{company_image}}" alt="">
         {{ /companies }}
