--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1271,6 +1271,13 @@ z-index: 101;
   color: rgb(3 252 150 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
 
   .md\:top-1\/2 {
